# openfeature-python-server

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  manual-publish.yml  release-please.yml
docs/: api-main.rst  conf.py  index.rst
ld_openfeature/: __init__.py  provider.py
ld_openfeature/impl/: context_converter.py  details_converter.py
tests/: test_data_sources.py  test_provider.py
tests/impl/: test_context_converter.py  test_details_converter.py
